--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "sveltekit-demo",
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "start": "svelte-kit start"
-  },
-  "devDependencies": {
-    "@sveltejs/kit": "^1.0.0-next.x",
-    "svelte": "^3.29.0",
-    "typescript": "^4.3.5",
-    "vite": "^2.5.1",
-    "@tsconfig/svelte": "^2.0.0"
-  }
+	"name": "svelte-dashboard",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/kit": "^1.20.4",
+		"svelte": "^4.0.5",
+		"svelte-check": "^3.4.3",
+		"typescript": "^5.0.0",
+		"vite": "^4.4.2"
+	},
+	"type": "module"
 }
