--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"firebase": "^10.6.0"
+		"daisyui": "^4.4.6",
+		"firebase": "^10.6.0",
+		"tailwindcss": "^3.3.5"
 	}
 }
