--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
 		"@sveltejs/adapter-auto": "^1.0.0-next.90",
 		"@sveltejs/kit": "^1.0.0-next.587",
 		"@types/cookie": "^0.5.1",
+		"autoprefixer": "^10.4.16",
+		"daisyui": "^4.4.6",
+		"postcss": "^8.4.31",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
+		"svelte-preprocess": "^5.1.1",
+		"tailwindcss": "^3.3.5",
 		"tslib": "^2.4.1",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
 	"type": "module",
 	"dependencies": {
-		"daisyui": "^4.4.6",
-		"firebase": "^10.6.0",
-		"tailwindcss": "^3.3.5"
+		"firebase": "^10.6.0"
 	}
 }
